--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">KakaoImages</string>
+    <string name="msg_no_results_found">No results found.</string>
 </resources>
