--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">KakaoImages</string>
     <string name="msg_no_results_found">No results found.</string>
+    <string name="msg_enter_text_message">Enter a text message.</string>
 </resources>
