--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">KakaoImages</string>
     <string name="msg_no_results_found">No results found.</string>
     <string name="msg_enter_text_message">Enter a text message.</string>
+    <string name="fmt_display_site_name">Source Site Name: %s</string>
+    <string name="fmt_date_time">Date Time: %s</string>
 </resources>
